--- a/package.json
+++ b/package.json
@@ -6,22 +6,34 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "compile": "ts-node solidity/scripts/compile.ts",
+    "deploy": "ts-node solidity/scripts/deploy.ts"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@metamask/detect-provider": "^2.0.0",
     "@mui/icons-material": "^5.11.0",
     "@mui/lab": "^5.0.0-alpha.114",
     "@mui/material": "^5.11.3",
     "@next/font": "13.1.1",
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.2",
+    "@nomiclabs/hardhat-ethers": "^2.2.2",
     "@reduxjs/toolkit": "^1.9.1",
+    "@typechain/hardhat": "^6.1.5",
+    "@types/mocha": "^9.1.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "@types/redux-persist": "^4.3.1",
+    "dotenv": "^16.0.3",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
+    "hardhat": "^2.9.7",
+    "hardhat-abi-exporter": "^2.9.0",
+    "hardhat-contract-sizer": "^2.6.1",
+    "hardhat-gas-reporter": "^1.0.8",
     "material-icons": "^1.13.1",
     "next": "13.1.1",
     "next-redux-wrapper": "^8.1.0",
@@ -33,7 +45,10 @@
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0",
     "sass": "^1.57.1",
-    "typescript": "4.9.4"
+    "solidity-coverage": "^0.8.2",
+    "typescript": "4.9.4",
+    "web3": "^1.8.1",
+    "web3-eth": "^1.8.1"
   },
   "devDependencies": {
     "@types/react-copy-to-clipboard": "^5.0.4"
